# PQSend

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SPEC.md  THREAT_MODEL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_design.md
.github/workflows/: ci.yml
crates/pqsend-cli/: Cargo.toml
crates/pqsend-cli/src/: main.rs
crates/pqsend-cli/tests/: contact_workflow.rs  explicit_key_workflow.rs
crates/pqsend-core/: Cargo.toml
crates/pqsend-core/src/: contact.rs  lib.rs
crates/pqsend-core/src/backend/: age.rs  mod.rs
crates/pqsend-core/src/package/: envelope.rs  mod.rs  single_file.rs
crates/pqsend-core/tests/: age_backend.rs  package_v01.rs  test_vectors.rs
docs/: COMPATIBILITY.md  CONTACTS.md  FORMAT.md  README.md  RECEIPTS.md  SECURITY-MODEL.md  THREAT-MODEL.md  backend-age.md  backlog.md  design-decisions.md  package-format.md  release-checklist.md  security-receipts.md
docs/DESIGNS/: README.md  backend-agility-and-pqc.md  multi-file-packages.md  reference-gui.md
docs/RELEASES/: README.md  release-checklist.md  v0.1.0-alpha.1.md
docs/releases/: v0.1.0-alpha.1.md
test-vectors/: README.md
test-vectors/v0-alpha/: README.md  manifest.toml  test-identity.txt  test-recipient.txt
test-vectors/v0-alpha/invalid/: README.md  package-tampered.pqsend  package-trailing-bytes.pqsend  package-truncated.pqsend
test-vectors/v0-alpha/valid/: README.md  package-empty-file.pqsend  package-filename-hidden.pqsend  package-small.pqsend
