[workspace]
members = [
    "crates/pqsend-cli",
    "crates/pqsend-core",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/xming101/PQSend"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.8"
