[package]
name = "pqsend-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and behavior for PQSend"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
